@@ -1,4 +1,5 @@
 4.5 -> 5.0:
+    - jbj: python ds.Uname getter for uname(...) dependencies.
     - jbj: use rpmmg magic wrapper.
     - jbj: add rpmmg magic wrapper.
     - jbj: unsnarl __FUNCTION__ from system.h AutoFu.
